--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -16,20 +16,16 @@
         </div><!-- /.col-md-9 -->
         <div class="col-md-3 col-sm-12">
           <header>
-            <h2>Second International Symposium on Foundations and Applications of Blockchain 2019</h2>
+            <h2>Third International Symposium on Foundations and
+Applications of Blockchain 2020</h2>
             <h3 style="color:white"><a
                 href="https://goo.gl/maps/HSsvzomQxwF2">
             </a></h3>
             <h3 style="color:white"><a
-                href="https://minghsiehee.usc.edu/visiting/">
-                EEB 132, Ming Hsieh Department of Electrical and Computer Engineering
+                href="https://www.ucsc.edu/">
+                University of California, Santa Cruz
             </a></h3>
-            <h3 style="color:white"><a
-                href="https://www.usc.edu/">
-                University of Southern California,
-            </a></h3>
-            <h3 style="color:white">Los Angeles, California</h3>
-            <h3 style="color:white">April 5, 2019</h3>
+            <h3 style="color:white">May 1, 2020</h3>
           </header>
         </div><!-- /.col-md-3 -->
 
