--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -7,8 +7,9 @@
           <div class="row">
             <div class="image-carousel">
               <div class="slide">
-                <div class="image-carousel-slide"><img
-                    src="assets/img/usc_tommy_trojan.jpg"
+                <div class="image-carousel-slide">
+                    <img
+                    src="assets/img/ucsc-soe.jpeg"
                     style="width: 60%"></div>
               </div><!-- /.slide -->
             </div><!-- /.image-carousel -->
