high resolution image

--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -9,7 +9,10 @@
               <div class="slide">
                 <div class="image-carousel-slide">
                     <img
-                    src="assets/img/ucsc-soe.jpeg"
+                    src="assets/img/ucsc-soe.jpg"
+                    style="width: 60%"></div>
+                    <img
+                    src="assets/img/ucsc-soe.jpg"
                     style="width: 60%"></div>
               </div><!-- /.slide -->
             </div><!-- /.image-carousel -->
