--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,5 +11,26 @@
 
   <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async
+src="https://www.googletagmanager.com/gtag/js?id=UA-157359031-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-157359031-1');
+</script>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','http://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-157359031-1', 'scfab.github.io/2020/');
+  ga('send', 'pageview');
+</script>
+
   <title>2020 Symposium on Foundations and Applications of Blockchain</title>
 </head>
