--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,6 +41,7 @@
               <a href="#" class="has-child no-link">Program</a>
               <ul class="list-unstyled child-navigation">
                 <li><a href="schedule.html">Symposium schedule</a></li>
+                <li><a href="accepted-papers.html">Accepted papers</a></li>
                 <li><a href="keynotes.html">Keynote</a></li>
                 <!-- <li><a href="poster-schedule.html">Poster
                         schedule</a></li>
